# revaport

./: .gitignore  README.md
.claude/: launch.json  settings.local.json
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/models/: __init__.py  holding.py  lot.py  price_cache.py  transaction.py
backend/app/routers/: holdings.py  portfolio.py  prices.py  stream.py  transactions.py
backend/app/schemas/: holding.py  price.py  transaction.py
backend/app/services/: backfill.py  cost_basis.py  event_bus.py  market_hours.py  portfolio_service.py  price_service.py  scheduler.py  splits.py  ticker.py  yfinance_client.py
backend/tests/: test_cost_basis.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vite.demo.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  holdings.ts  portfolio.ts  prices.ts  transactions.ts
frontend/src/components/charts/: AllocationPie.tsx  PortfolioValueChart.tsx  TickerPriceChart.tsx  chartTheme.ts
frontend/src/components/holdings/: AddCashDialog.tsx  AddHoldingForm.tsx  HoldingsTable.tsx
frontend/src/hooks/: PriceStreamProvider.tsx  useHoldings.ts  usePortfolio.ts  usePriceStream.ts  useTransactions.ts
frontend/src/lib/: format.ts  theme.ts
frontend/src/pages/: Dashboard.tsx  Holdings.tsx  TickerDetail.tsx  Transactions.tsx
frontend/src/styles/: animations.css  textures.css  theme.css
frontend/src/types/: api.ts
scripts/: convert_broker_csv.py  dev.py  dev_demo.py  seed_demo.py  take_screenshots.mjs
(+14 files in other folders)
