[project]
name = "port-backend"
version = "0.1.0"
description = "Local stock portfolio tracker backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.35",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "yfinance>=0.2.50",
    "apscheduler>=3.10.4",
    "sse-starlette>=2.1.3",
    "pandas>=2.2.0",
    "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
